--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node project starter with Typescript, ESLint and Prettier",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./index.ts",
     "eslint:fix": "eslint --fix"
