--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
+
   "scripts": {
-    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./index.ts",
-    "eslint:fix": "eslint --fix"
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
