--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
 
   "scripts": {
-    "build": "tsc",
+    "build": "npm install && tsc",
     "start": "node ./dist/index.js"
   },
   "devDependencies": {
